fumble around with rows, columns, and nesting to get correct format. remove un need css and ids. create new id of whiteOut to make the visible element's background white. create one row with two columns. the first Column is row one will hold all of the visible body elements within its self using a sub row of one and a column of one. The second column of row one with be empty with a width of col 12 col md 5 and col lg 5.

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 
   body {
     background-color: #ebebeb;
+  }
+  .container{
+    margin-top: 50px;
 
   }
-  .container {
-    background-color: white;
-    margin-top: 50px;
-  }
   .page-header{
-    background-color: #505050;
+
     margin-top: 20px;
+  }
+  #whiteOut {
+    background-color: white;
   }
